# rdm-restricted-permissions

./: .env.example  .gitignore  .invenio  Dockerfile  Pipfile  README.md  azure-pipelines.yml  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  run-js-linter.sh
app_data/: pages.yaml  vocabularies-future.yaml  vocabularies.yaml
app_data/pages/: community_manager_responsibilities_en.html  community_manager_responsibilities_sv.html  create_community_en.html  create_community_sv.html  github_integration_en.html  github_integration_sv.html  how_to_en.html  how_to_sv.html  rest_api_reference_en.html  rest_api_reference_sv.html  restrict_record_access_en.html  restrict_record_access_sv.html  share_record_access_en.html  share_record_access_sv.html  terms_en.html  terms_sv.html  upload_record_en.html  upload_record_sv.html
app_data/vocabularies/: date_types.yaml  description_types.yaml  development_status.yaml  relation_types.yaml  removal_reasons.yaml  resource_types.yaml  roles.yaml  (+1 more)
patches/: add_to_fixtures.patch  apply_patches.md
scripts/: acr_pull_latest_tag.sh  docker_prune_all.sh  ignite_app.sh  replace_locale_paths.sh  run_full_container.sh  scripts.md  services_setup.sh  vocabularies_import.sh
site/: .gitkeep  README.md  run-tests.sh  setup.cfg
site/kth_rdm_v12/: __init__.py  permissions.py  views.py  webpack.py
site/kth_rdm_v12/authentication/: __init__.py  kth_sso_auth.py  registration_form.py
site/tests/: conftest.py  fake_datacite_client.py  test_module.py  test_permissions.py
translations/: messages.pot
(+28 files in other folders)
