
[metadata]
name = kth-rdm-v12

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black>=0.3.0
    pytest-mock>=3

[options.entry_points]
invenio_base.blueprints =
    kth_rdm_v12_views = kth_rdm_v12.views:create_blueprint
invenio_assets.webpack =
    kth_rdm_v12_theme = kth_rdm_v12.webpack:theme

[pydocstyle]
add_ignore = D401, D403, E501, D100

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=kth_rdm_v12 --cov-report=term-missing --maxfail=999999
testpaths = tests kth_rdm_v12